--- a/Yapbam/src/Resources_pt.properties
+++ b/Yapbam/src/Resources_pt.properties
@@ -512,9 +512,9 @@ CustomFilterPanel.amount.equals=Igual a
 CustomFilterPanel.amount.equals.toolTip=Selecione transações com valores iguais aos valores dos seguintes campos
 CustomFilterPanel.amout.between=Entre
 CustomFilterPanel.amout.between.toolTip=Selecione transações com valores entre os valores dos seguintes campos
-CustomFilterPanel.amout.minimum=Valor máximo
+CustomFilterPanel.amout.minimum=Valor mínimo 
 CustomFilterPanel.amount.to=e
-CustomFilterPanel.amount.maximum=Valor mínimo
+CustomFilterPanel.amount.maximum=Valor máximo
 
 CustomFilterPanel.date.all=Todas
 CustomFilterPanel.date.all.toolTip=Selecione este para limpar o filtro da data do valor da transação
@@ -934,85 +934,85 @@ MainMenu.Transactions.Periodical.disabled.tooltip.line2=Transações periódicas po
 
 #---------------------------------
 #Error messages when the proxy configuration entered in the preference panel is wrong
-PreferencesDialog.Network.proxyNameMissing=The proxy host name is not entered in the "{0}" tab
-PreferencesDialog.Network.invalidPort=The proxy port is out of range in the "{0}" tab (maximum is {1})
+PreferencesDialog.Network.proxyNameMissing=O nome do proxy não foi colocado na aba "{0}"
+PreferencesDialog.Network.invalidPort=A porta proxy está fora do limite da aba "{0}" (máximo é {1})
 
 #---------------------------------
-MainFrame.LastNotFound=The last opened file ({0}) does not exist anymore
+MainFrame.LastNotFound=O Último arquivo aberto ({0}) não existe mais
 
 #---------------------------------
-# New dialogs when an update is available but can't be installed (yapbam installatio directory is write protected).
-MainMenu.CheckUpdate.Success.systemProtected=<html>Your version: <B>{0}</B><BR>Latest version: <B>{1}</B><BR><BR>Yapbam cannot update itself because its installation directory is protected by the system (maybe windows UAC ?).<br><br>You''ll have to install this update manually using the installer.<br><br>This installer and the release notes are available at <a href="http://www.yapbam.net">http://www.yapbam.net</a></html>
-MainMenu.CheckUpdate.Success.writeProtected=<html>Your version: <B>{0}</B><BR>Latest version: <B>{1}</B><BR><BR>Yapbam cannot update itself because its installation directory is write protected.<br><br>The new version and its release notes are available at <a href="http://www.yapbam.net">http://www.yapbam.net</a></html>
-MainMenu.CheckUpdate.Success.openSite=Open Yapbam's web site
+# New dialogs when an update is available but can't be installed (yapbam installation directory is write protected).
+MainMenu.CheckUpdate.Success.systemProtected=<html>Sua versão: <B>{0}</B><BR>Última versão: <B>{1}</B><BR><BR>Yapbam não pode se atualizar por que o diretório de sua instalação é protegido pelo sistema (talvez windows UAC ?).<br><br>Você vai ter que instalar esta atualização manualmente usando o instalador.<br><br>O instalador e as notas de release estão disponíveis na <a href="http://www.yapbam.net">http://www.yapbam.net</a></html>
+MainMenu.CheckUpdate.Success.writeProtected=<html>Sua versão: <B>{0}</B><BR>Última versão: <B>{1}</B><BR><BR>Yapbam não pode se atualizar por que o diretório de sua instalação tem proteção escrita.<br><br>A nova versão e as notas de release estão disponíveis na <a href="http://www.yapbam.net">http://www.yapbam.net</a></html>
+MainMenu.CheckUpdate.Success.openSite=Abrir o site do Yapbam
 
 #----------------------------------
 #New dialog to enter a transfer between two accounts
-TransferDialog.menu=New transfer
-TransferDialog.title=New transfer
-TransferDialog.needsTwoAccounts=Creating a transfer requires at least two accounts
-TransferDialog.amount=Enter the transfer amount here
-TransferDialog.from.account.tooltip=Select the source account in this menu
-TransferDialog.to.account.tooltip=Select the target account in this menu
-TransferDialog.from.valueDate.tooltip=Enter the value date for the source account
-TransferDialog.to.valueDate.tooltip=Enter the value date for the target account
-TransferDialog.from.title=From
-TransferDialog.to.title=to
-TransferDialog.error.accountAreEquals=This button is disabled because both accounts are the same
-TransferDialog.error.amountIsNotPositive=This button is disabled because the transfer's amount is null or negative
-TransferDialog.errorValueDate=This button is disabled because the value date in the "{0}" panel is wrong
+TransferDialog.menu=Nova transferência
+TransferDialog.title=Nova transferência
+TransferDialog.needsTwoAccounts=Criar uma Nova transferência requere pelo menos duas contas
+TransferDialog.amount=Digite o valor de Nova transferência aqui
+TransferDialog.from.account.tooltip=Selecione a conta de origem aqui neste menu
+TransferDialog.to.account.tooltip=Selecione a conta de destino aqui neste menu
+TransferDialog.from.valueDate.tooltip=Digite o valor da data para a conta de origem
+TransferDialog.to.valueDate.tooltip=Digite o valor da data para a conta de destino
+TransferDialog.from.title=De
+TransferDialog.to.title=Para
+TransferDialog.error.accountAreEquals=Este botão fica disabilitado por que ambas as contas sao as mesmas
+TransferDialog.error.amountIsNotPositive=Este botão fica disabilitado por que o valor de transferência é inexistente ou negativo
+TransferDialog.errorValueDate=Este botão fica disabilitado por que o valor da data no "{0}" painel está errado
 
 #----------------------------------
 #New preference sub-panel to set the background colors of the transaction table
-MainFrame.Transactions.Preferences.customBackground.title=Use custom background color
-MainFrame.Transactions.Preferences.customBackground.tooltip=Check this box to have custom background colors
-MainFrame.Transactions.Preferences.expenseSample=Expense
-MainFrame.Transactions.Preferences.receiptSample=Receipt
-MainFrame.Transactions.Preferences.changeExpenseBackground.title=Change expense background
-MainFrame.Transactions.Preferences.changeExpenseBackground.tooltip=Click this button to choose the expense background
-MainFrame.Transactions.Preferences.changeReceiptBackground.title=Change receipt background
-MainFrame.Transactions.Preferences.changeReceiptBackground.tooltip=Click this button to choose the reicept background
+MainFrame.Transactions.Preferences.customBackground.title=Use cores customizadas para o fundo da table
+MainFrame.Transactions.Preferences.customBackground.tooltip=Selecione esta caixa para ter cores customizadas de fundo
+MainFrame.Transactions.Preferences.expenseSample=Gastos
+MainFrame.Transactions.Preferences.receiptSample=Recibos
+MainFrame.Transactions.Preferences.changeExpenseBackground.title=Muda a cor do fundo dos Gastos
+MainFrame.Transactions.Preferences.changeExpenseBackground.tooltip=Clique neste botão para escolher a cor do fundo dos gastos
+MainFrame.Transactions.Preferences.changeReceiptBackground.title=Muda a cor do fundo dos Recibos
+MainFrame.Transactions.Preferences.changeReceiptBackground.tooltip=Clique neste botão para escolher a cor do fundo dos recibos
 #The two following lines are the description of the transactions
 #example: For a transfer from account A to B, the description of the transaction in A account will be "To B"
-TransferDialog.from.description=To {0}
-TransferDialog.to.description=From {0}
+TransferDialog.from.description=Para {0}
+TransferDialog.to.description=De {0}
 
 #----------------------------------
 #In the LaunchState tab of the preference panel, a new checkbox to remember how table rows are sorted 
-PreferencesDialog.startState.rowsSortKeys=Remember the sort order of rows
-PreferencesDialog.StartState.rowsSortKeys.tooltip=Check this box to remember row sort order between Yapbam launches
+PreferencesDialog.startState.rowsSortKeys=Lembra a ordem feita pelas linhas 
+PreferencesDialog.StartState.rowsSortKeys.tooltip=Cheque esta caixa para lembrar a ordem feita pelas linhas entre as últimas vezes que o Yabam foi aberto
 
 #---------------------------------
 #Backup preference panel (This functionnality is not yet implemented)
 Backup.preference.title=Backups
-Backup.preference.tooltip=This tab allows you to configure the automatic backup of your data
-Backup.preference.activate=Enable automatic backups
-Backup.preference.activate.tooltip=Check this box to enable automatic backups
-Backup.preference.helpButton.toolTip=Click this to get help on automatic backup
-Backup.preference.disk.disk=Disk-based
-Backup.preference.disk.disk.tooltip=Select this option to perform your backups on a disk on your computer or a USB key
-Backup.preference.disk.select=Select
-Backup.preference.disk.select.tooltip=Click this button to choose where to save your data
+Backup.preference.tooltip=Esta aba permite-lhe configurar backups automáticos dos seus dados
+Backup.preference.activate=Habilita backups automáticos
+Backup.preference.activate.tooltip=Cheque esta caixa para habilitar backups automáticos
+Backup.preference.helpButton.toolTip=Clique aqui para obter ajuda como fazer backups automáticos
+Backup.preference.disk.disk=Baseado em disco
+Backup.preference.disk.disk.tooltip=Selecione esta opção para realizar seus backups no disco no seu computador ou em um USB
+Backup.preference.disk.select=Selecione
+Backup.preference.disk.select.tooltip=Clique nest botão para escolher onde salvar os dados
 Backup.preference.ftp.ftp=FTP
-Backup.preference.ftp.ftp.tooltip=Select this to backup to a FTP server
-Backup.preference.ftp.server=Server:
-Backup.preference.ftp.server.tooltip=Enter the ftp host name
-Backup.preference.ftp.directory=Directory:
-Backup.preference.ftp.directory.tooltip=Enter the remote directory path where to store your data
-Backup.preference.ftp.user.tooltip=Enter the account used to connect to server
-Backup.preference.ftp.password.tooltip=Enter the password for the account
-Backup.preference.maxSize=Maximum disk space dedicated to backups:
+Backup.preference.ftp.ftp.tooltip=Selecione este para fazer um backup eum servidor FTP
+Backup.preference.ftp.server=Servidor:
+Backup.preference.ftp.server.tooltip=Digite o name do host do ftp
+Backup.preference.ftp.directory=Diretório:
+Backup.preference.ftp.directory.tooltip=Digite o path do diretório remoto onde você que armazenar seus dados
+Backup.preference.ftp.user.tooltip=Digite a conta a ser usada para conectar no servidor
+Backup.preference.ftp.password.tooltip=Digite a senha da conta
+Backup.preference.maxSize=Máximo espaço no disco dedicado a backups:
 Backup.preference.maxSize.unit=MB
-Backup.preference.maxSize.tooltip=<html>Enter the maximum disk space dedicated to bakcups.<br>Once the limit is reached, the oldest backups will be deleted.<br><br>Leave this field blank to not limit the space dedicated to backups.</html>
+Backup.preference.maxSize.tooltip=<html>Digite o máximo  de espaço no disco dedicado a backups.<br>Uma vez que o limite for alcançado, o backup antigo será deletado.<br><br>Deixe este em branco senão tiver limite de espaço dedicado a backups.</html>
 
-Backup.preference.ftp.port.tooltip=Enter the port number here
-Backup.preference.compress=Compress backup files
-Backup.preference.compress.tooltip=Select this option to compress the backup files in zip format
-Backup.preference.disk.default=Default
-Backup.preference.disk.default.tooltip=Sets the backup location to its default value: {0}
-Backup.preference.disk.location=Location:
-Backup.preference.ftp.server.missing=The FTP server name is empty in the "{0}" tab
-Backup.preference.ftp.user.missing=The user name is empty in the "{0}" tab
-Backup.preference.ftp.invalidPort=The ftp port is out of range in the "{0}" tab (maximum is {1})
+Backup.preference.ftp.port.tooltip=Digite o número da porta aqui
+Backup.preference.compress=Comprimir arquivos de backup
+Backup.preference.compress.tooltip=Selecione esta opção para comprimir arquivos de backup no formato zip
+Backup.preference.disk.default=Padrão
+Backup.preference.disk.default.tooltip=Coloca o local do backup para o seu valor padrão: {0}
+Backup.preference.disk.location=Local:
+Backup.preference.ftp.server.missing=O nome do servidor FTP está vazio na "{0}" aba
+Backup.preference.ftp.user.missing=O nome do usuário está vazio na "{0}" aba
+Backup.preference.ftp.invalidPort=A porta do ftp está fora do limite na "{0}" aba (máximo é {1})
 
 
