--- a/Yapbam/src/net/yapbam/gui/tools/messages_fr.properties
+++ b/Yapbam/src/net/yapbam/gui/tools/messages_fr.properties
@@ -11,3 +11,7 @@ ToolsPlugIn.menu.toolTip=Ce menu permet l'acc\u00E8s aux utilitaires de Yapbam
 CurrencyConverterPanel.CurrencyColumnName=Devise
 CurrencyConverterPanel.CurrencyToColumnName=1 devise = ? {0}
 CurrencyConverterPanel.ToCurrencyColumnName=1 {0} = ? devises
+
+#Added or modified since last translation
+ToolsPlugin.currencyConverter.ioErrorMessage=<html>Une erreur est survenue lors de la communication avec la Banque Centrale Européenne.<br>Assurez-vous que votre connexion à Internet fonctionne.</html>
+ToolsPlugin.currencyConverter.wait.message=<html>Récupération des cours des devises auprès de la Banque Centrale Européenne.<br>Merci de patienter.</html>
