--- a/src/net/yapbam/gui/tools/messages_de.properties
+++ b/src/net/yapbam/gui/tools/messages_de.properties
@@ -11,3 +11,7 @@ ToolsPlugIn.menu.toolTip=Erm\u00f6glicht den Zugang zu den Yapbam-Extras
 CurrencyConverterPanel.CurrencyColumnName=W\u00e4hrung
 CurrencyConverterPanel.CurrencyToColumnName=1 W\u00e4hrung = ? {0}
 CurrencyConverterPanel.ToCurrencyColumnName=1 {0} = ? W\u00e4hrung
+
+#Added or modified since last translation
+ToolsPlugin.currencyConverter.ioErrorMessage=<html>Une erreur est survenue lors de la communication avec la Banque Centrale Européenne.<br>Assurez-vous que votre connexion à Internet fonctionne.</html>
+ToolsPlugin.currencyConverter.wait.message=<html>Récupération des cours des devises auprès de la Banque Centrale Européenne.<br>Merci de patienter.</html>
