--- a/src/net/yapbam/gui/tools/messages_pt.properties
+++ b/src/net/yapbam/gui/tools/messages_pt.properties
@@ -12,3 +12,6 @@ CurrencyConverterPanel.CurrencyColumnName=Moedas
 CurrencyConverterPanel.CurrencyToColumnName=1 moeda = ? {0}
 CurrencyConverterPanel.ToCurrencyColumnName=1 {0} = ? moedas
 
+#Added or modified since last translation
+ToolsPlugin.currencyConverter.ioErrorMessage=<html>An error occurred while communicating with the European Central Bank.<br>Make sure your Internet connection is working.</html>
+ToolsPlugin.currencyConverter.wait.message=<html>Download of currency from the European Central Bank.<br>Thank you for your patience.</html>
