--- a/src/Resources_de.properties
+++ b/src/Resources_de.properties
@@ -967,9 +967,6 @@ MainMenu.CheckUpdate.Success.systemProtected=<html>Ihre Version: <B>{0}</B><BR>A
 MainMenu.CheckUpdate.Success.writeProtected=<html>Ihre Version: <B>{0}</B><BR>Aktuelle Version: <B>{1}</B><BR><BR>Yapbam kann nicht aktualisiert werden, weil das Installationsverzeichnis schreibgesch\u00fctzt ist.<br><br>Die neue Version und die Release Notes sind verf\u00fcgbar unter <a href="http://www.yapbam.net">http://www.yapbam.net</a></html>
 MainMenu.CheckUpdate.Success.openSite=Yapbam Webseite \u00f6ffnen
 
-#---------------------------------------------------------------------------------------------------------------------------------
-# Added or modified since last translation
-#----------------------------------
 #New dialog to enter a transfer between two accounts
 TransferDialog.menu=Neuer Transfer
 TransferDialog.title=Neuer Transfer
@@ -1005,3 +1002,10 @@ MainFrame.Transactions.Preferences.changeExpenseBackground.tooltip=Klicken Sie h
 MainFrame.Transactions.Preferences.changeReceiptBackground.title=Hintergrundfarbe f\u00fcr Einnahmen \u00e4ndern
 MainFrame.Transactions.Preferences.changeReceiptBackground.tooltip=Klicken Sie hier, um die Farbe f\u00fcr Einnahmen zu w\u00e4hlen
 
+#-------------------------------------------------------
+# Added or modified since last translation
+
+# A new process is implemented to check the transactions in the Statement tab.
+# Now, the checked transactions are displayed in the bottom of the window and the following menu allox the user to remove them from the statement.   
+MainMenu.Transactions.Uncheck=Retirer du relevé
+MainMenu.Transactions.Uncheck.ToolTip=Retire l'opération sélectionnée du relevé
