--- a/src/Resources_fr.properties
+++ b/src/Resources_fr.properties
@@ -1001,3 +1001,11 @@ Backup.preference.ftp.server.missing=Le nom du serveur FTP n''est pas renseigné 
 Backup.preference.ftp.user.missing=Le nom d''utilisateur n''est pas renseigné dans l''onglet "{0}"
 Backup.preference.ftp.invalidPort=Le numéro de port ftp est en dehors des limites dans l''onglet "{0}" (le maximum est {1})
 
+#-------------------------------------------------------
+# Added or modified since last translation
+
+# A new process is implemented to check the transactions in the Statement tab.
+# Now, the checked transactions are displayed in the bottom of the window and the following menu allox the user to remove them from the statement.   
+MainMenu.Transactions.Uncheck=Retirer du relevé
+MainMenu.Transactions.Uncheck.ToolTip=Retire l'opération sélectionnée du relevé
+
