--- a/Yapbam/src/Resources_pt.properties
+++ b/Yapbam/src/Resources_pt.properties
@@ -919,8 +919,6 @@ MainFrame.BalancePanel.Relative.ToolTip=<b>AVISO</b>: Este campo contém valor re
 #Uma nova dica explicando todas estas coisas!
 Tip.9=<html>Yapbam pode exibir o sumário do saldo relativo.<hr style="width:40%">Você pode selecionar um dos saldos exibidos na parte inferior da <b>{0}</b> guia clicando nele. Os saldos remanescentes serão então calculados em relação a esta referência.</html>
 
-#-------------------------------------------------------
-# Added or modified since last translation
 ImportDialog.error.emptyFile=O arquivo importado está vazio
 ImportDialog.error.exception=Ocorreu um erro ({0}) ao ler o arquivo
 
@@ -1015,4 +1013,11 @@ Backup.preference.ftp.server.missing=O nome do servidor FTP está vazio na "{0}" 
 Backup.preference.ftp.user.missing=O nome do usuário está vazio na "{0}" aba
 Backup.preference.ftp.invalidPort=A porta do ftp está fora do limite na "{0}" aba (máximo é {1})
 
+#-------------------------------------------------------
+# Added or modified since last translation
+
+# A new process is implemented to check the transactions in the Statement tab.
+# Now, the checked transactions are displayed in the bottom of the window and the following menu allox the user to remove them from the statement.   
+MainMenu.Transactions.Uncheck=Remove from the statement
+MainMenu.Transactions.Uncheck.ToolTip=Removes the transaction from the statement
 
