--- a/Yapbam/src/Resources_de.properties
+++ b/Yapbam/src/Resources_de.properties
@@ -1009,3 +1009,7 @@ MainFrame.Transactions.Preferences.changeReceiptBackground.tooltip=Klicken Sie h
 # Now, the checked transactions are displayed in the bottom of the window and the following menu allox the user to remove them from the statement.   
 MainMenu.Transactions.Uncheck=Retirer du relevé
 MainMenu.Transactions.Uncheck.ToolTip=Retire l'opération sélectionnée du relevé
+# The title of the list of the transactions that are not already checked 
+CheckModePanel.notChecked.title=Opérations non pointées
+# An alert message displayed when the edited statement is not the last one
+CheckModePanel.notLast.message=Attention, il existe des relevés plus récents que celui-ci !
