--- a/Yapbam/src/Resources_fr.properties
+++ b/Yapbam/src/Resources_fr.properties
@@ -1008,4 +1008,8 @@ Backup.preference.ftp.invalidPort=Le numéro de port ftp est en dehors des limite
 # Now, the checked transactions are displayed in the bottom of the window and the following menu allox the user to remove them from the statement.   
 MainMenu.Transactions.Uncheck=Retirer du relevé
 MainMenu.Transactions.Uncheck.ToolTip=Retire l'opération sélectionnée du relevé
+# The title of the list of the transactions that are not already checked 
+CheckModePanel.notChecked.title=Opérations non pointées
+# An alert message displayed when the edited statement is not the last one
+CheckModePanel.notLast.message=Attention, il existe des relevés plus récents que celui-ci !
 
