--- a/src/Resources_de.properties
+++ b/src/Resources_de.properties
@@ -207,7 +207,6 @@ CheckModePanel.title=Pr\u00fcfmodus
 CheckModePanel.title.tooltip=Klicken Sie hier, um den Pr\u00fcfmodus einzuschalten (Ein Doppelklick auf einen Zahlungsvorgang markiert ihn als "gepr\u00fcft")
 CheckModePanel.valueDate.tooltip=Geben Sie das Wertstellungsdatum ein, das f\u00fcr die markierten Zahlungsvorg\u00e4nge gelten soll
 CheckModePanel.valueDateEnabled=Wertstellungsdatum \u00e4ndern
-CheckModePanel.valueDateEnabled.toolTip=Markieren Sie diese Option, wenn die Wertstellung der gew\u00e4hlten Vorg\u00e4nge automatisch auf das nachfolgende Datum gesetzt werden soll
 
 ModeDialog.title.new=Neue Zahlungsweise
 ModeDialog.title.edit=Zahlungsweise bearbeiten
@@ -1006,10 +1005,17 @@ MainFrame.Transactions.Preferences.changeReceiptBackground.tooltip=Klicken Sie h
 # Added or modified since last translation
 
 # A new process is implemented to check the transactions in the Statement tab.
-# Now, the checked transactions are displayed in the bottom of the window and the following menu allox the user to remove them from the statement.   
-MainMenu.Transactions.Uncheck=Retirer du relevé
-MainMenu.Transactions.Uncheck.ToolTip=Retire l'opération sélectionnée du relevé
+# Now, the window is split into two parts. In the upper one, there's the list of transactions that are not already checked, in the lower, there's the currently edited statement.  
 # The title of the list of the transactions that are not already checked 
 CheckModePanel.notChecked.title=Opérations non pointées
+# This wording was already existing, but, now, the button is no more a checkbox. It changes the value date of the selected transactions. 
+CheckModePanel.valueDateEnabled.toolTip=Change la date de valeur des opérations sélectionnées
+# A summary of selected unchecked transactions
+CheckModePanel.selectedSummaryPlural={0} opérations sélectionnées. Total : {1}
+CheckModePanel.selectedSummarySingular=Une opération sélectionnée. Montant : {0}
 # An alert message displayed when the edited statement is not the last one
 CheckModePanel.notLast.message=Attention, il existe des relevés plus récents que celui-ci !
+# In the edited statement, a new popup menu allow the user to remove selected transactions from the statement.   
+MainMenu.Transactions.Uncheck=Retirer du relevé
+MainMenu.Transactions.Uncheck.ToolTip=Retire l'opération sélectionnée du relevé
+
