--- a/Yapbam/src/Resources_pt.properties
+++ b/Yapbam/src/Resources_pt.properties
@@ -199,7 +199,6 @@ CheckModePanel.title=Modo de verificação
 CheckModePanel.title.tooltip=Clique aqui para disponibilizar o modo de verificação (um clique duplo na transação marca a mesma como "verificada")
 CheckModePanel.valueDate.tooltip=Digite uma data válida para ser aplicada em transações verificadas
 CheckModePanel.valueDateEnabled=Modifique o valor da data por
-CheckModePanel.valueDateEnabled.toolTip=Verifique esta caixa para automaticamente modificar o valor da data das transações verificadas pela data no próximo campo
 
 AccountDialog.title.new=Nova conta
 AccountDialog.title.edit=Edite a conta
@@ -1017,11 +1016,16 @@ Backup.preference.ftp.invalidPort=A porta do ftp está fora do limite na "{0}" ab
 # Added or modified since last translation
 
 # A new process is implemented to check the transactions in the Statement tab.
-# Now, the checked transactions are displayed in the bottom of the window and the following menu allox the user to remove them from the statement.   
-MainMenu.Transactions.Uncheck=Remove from the statement
-MainMenu.Transactions.Uncheck.ToolTip=Removes the transaction from the statement
+# Now, the window is split into two parts. In the upper one, there's the list of transactions that are not already checked, in the lower, there's the currently edited statement.  
 # The title of the list of the transactions that are not already checked 
 CheckModePanel.notChecked.title=Not checked transactions
+# This wording was already existing, but, now, the button is no more a checkbox. It changes the value date of the selected transactions. 
+CheckModePanel.valueDateEnabled.toolTip=Changes the value date of the selected transactions
+# A summary of selected unchecked transactions
+CheckModePanel.selectedSummaryPlural={0} selected transactions. Total: {1}
+CheckModePanel.selectedSummarySingular=One selected transaction. Amount: {0}
 # An alert message displayed when the edited statement is not the last one
 CheckModePanel.notLast.message=Warning, there are statements newer than this one!
-
+# In the edited statement, a new popup menu allow the user to remove selected transactions from the statement.   
+MainMenu.Transactions.Uncheck=Remove from the statement
+MainMenu.Transactions.Uncheck.ToolTip=Removes the transaction from the statement
