--- a/Yapbam/src/Resources_fr.properties
+++ b/Yapbam/src/Resources_fr.properties
@@ -198,7 +198,6 @@ CheckModePanel.title=Mode pointage
 CheckModePanel.title.tooltip=Cliquez ici pour passer en mode pointage (un double clic sur une opération la marque "pointée")
 CheckModePanel.valueDate.tooltip=Entrez une date de valeur à appliquer aux opérations pointées
 CheckModePanel.valueDateEnabled=Remplacer la date de valeur par
-CheckModePanel.valueDateEnabled.toolTip=Cochez cette case pour remplacer automatiquement la date de valeur des opérations pointées par le champ ci-contre
 
 AccountDialog.title.new=Création de compte
 AccountDialog.title.edit=Edition de compte
@@ -1005,11 +1004,17 @@ Backup.preference.ftp.invalidPort=Le numéro de port ftp est en dehors des limite
 # Added or modified since last translation
 
 # A new process is implemented to check the transactions in the Statement tab.
-# Now, the checked transactions are displayed in the bottom of the window and the following menu allox the user to remove them from the statement.   
-MainMenu.Transactions.Uncheck=Retirer du relevé
-MainMenu.Transactions.Uncheck.ToolTip=Retire l'opération sélectionnée du relevé
+# Now, the window is split into two parts. In the upper one, there's the list of transactions that are not already checked, in the lower, there's the currently edited statement.  
 # The title of the list of the transactions that are not already checked 
 CheckModePanel.notChecked.title=Opérations non pointées
+# This wording was already existing, but, now, the button is no more a checkbox. It changes the value date of the selected transactions. 
+CheckModePanel.valueDateEnabled.toolTip=Change la date de valeur des opérations sélectionnées
+# A summary of selected unchecked transactions
+CheckModePanel.selectedSummaryPlural={0} opérations sélectionnées. Total : {1}
+CheckModePanel.selectedSummarySingular=Une opération sélectionnée. Montant : {0}
 # An alert message displayed when the edited statement is not the last one
 CheckModePanel.notLast.message=Attention, il existe des relevés plus récents que celui-ci !
+# In the edited statement, a new popup menu allow the user to remove selected transactions from the statement.   
+MainMenu.Transactions.Uncheck=Retirer du relevé
+MainMenu.Transactions.Uncheck.ToolTip=Retire l'opération sélectionnée du relevé
 
