--- a/src/Resources_de.properties
+++ b/src/Resources_de.properties
@@ -1007,15 +1007,15 @@ MainFrame.Transactions.Preferences.changeReceiptBackground.tooltip=Klicken Sie h
 # A new process is implemented to check the transactions in the Statement tab.
 # Now, the window is split into two parts. In the upper one, there's the list of transactions that are not already checked, in the lower, there's the currently edited statement.  
 # The title of the list of the transactions that are not already checked 
-CheckModePanel.notChecked.title=Opérations non pointées
+CheckModePanel.notChecked.title=Ung\u00fcltige Zahlungsvorg\u00e4nge
 # This wording was already existing, but, now, the button is no more a checkbox. It changes the value date of the selected transactions. 
-CheckModePanel.valueDateEnabled.toolTip=Change la date de valeur des opérations sélectionnées
+CheckModePanel.valueDateEnabled.toolTip=\u00c4ndert das Wertstellungsdatum der gew\u00e4hlten Zahlungsvorg\u00e4nge
 # A summary of selected unchecked transactions
-CheckModePanel.selectedSummaryPlural={0} opérations sélectionnées. Total : {1}
-CheckModePanel.selectedSummarySingular=Une opération sélectionnée. Montant : {0}
+CheckModePanel.selectedSummaryPlural={0} Zahlungsvorg\u00e4nge gew\u00e4hlt. Gesamt: {1}
+CheckModePanel.selectedSummarySingular=Ein Zahlungsvorgang gew\u00e4hlt. Betrag: {0}
 # An alert message displayed when the edited statement is not the last one
-CheckModePanel.notLast.message=Attention, il existe des relevés plus récents que celui-ci !
+CheckModePanel.notLast.message=Achtung, es gibt noch aktuellere Eintr\u00e4ge als diesen!
 # In the edited statement, a new popup menu allow the user to remove selected transactions from the statement.   
-MainMenu.Transactions.Uncheck=Retirer du relevé
-MainMenu.Transactions.Uncheck.ToolTip=Retire l'opération sélectionnée du relevé
+MainMenu.Transactions.Uncheck=Von diesem Empf\u00e4nger/Auftraggeber entfernen
+MainMenu.Transactions.Uncheck.ToolTip=Den gew\u00e4hlten Zahlungsvorgang von diesem Empf\u00e4nger/Auftraggeber entfernen
 
