--- a/src/net/yapbam/gui/tools/messages_de.properties
+++ b/src/net/yapbam/gui/tools/messages_de.properties
@@ -13,5 +13,5 @@ CurrencyConverterPanel.CurrencyToColumnName=1 W\u00e4hrung = ? {0}
 CurrencyConverterPanel.ToCurrencyColumnName=1 {0} = ? W\u00e4hrung
 
 #Added or modified since last translation
-ToolsPlugin.currencyConverter.ioErrorMessage=<html>Une erreur est survenue lors de la communication avec la Banque Centrale Européenne.<br>Assurez-vous que votre connexion à Internet fonctionne.</html>
-ToolsPlugin.currencyConverter.wait.message=<html>Récupération des cours des devises auprès de la Banque Centrale Européenne.<br>Merci de patienter.</html>
+ToolsPlugin.currencyConverter.ioErrorMessage=<html>Beim Verbindungsaufbau zur Europ\u00e4ischen Zentralbank ist ein Fehler aufgetreten.<br>Pr\u00fcfen Sie, ob Ihre Internet-Verbindung funktioniert.</html>
+ToolsPlugin.currencyConverter.wait.message=<html>Die Devisenkurse werden von der Europ\u00e4ischen Zentralbank abgerufen.<br>Bitte haben Sie etwas Geduld.</html>
