--- a/Yapbam/src/Resources_pt.properties
+++ b/Yapbam/src/Resources_pt.properties
@@ -1012,20 +1012,22 @@ Backup.preference.ftp.server.missing=O nome do servidor FTP está vazio na "{0}" 
 Backup.preference.ftp.user.missing=O nome do usuário está vazio na "{0}" aba
 Backup.preference.ftp.invalidPort=A porta do ftp está fora do limite na "{0}" aba (máximo é {1})
 
-#-------------------------------------------------------
-# Added or modified since last translation
-
 # A new process is implemented to check the transactions in the Statement tab.
 # Now, the window is split into two parts. In the upper one, there's the list of transactions that are not already checked, in the lower, there's the currently edited statement.  
 # The title of the list of the transactions that are not already checked 
-CheckModePanel.notChecked.title=Not checked transactions
+CheckModePanel.notChecked.title=Transações nao checadas
 # This wording was already existing, but, now, the button is no more a checkbox. It changes the value date of the selected transactions. 
-CheckModePanel.valueDateEnabled.toolTip=Changes the value date of the selected transactions
+CheckModePanel.valueDateEnabled.toolTip=Muda a data do valor das transações selecionadas
 # A summary of selected unchecked transactions
-CheckModePanel.selectedSummaryPlural={0} selected transactions. Total: {1}
-CheckModePanel.selectedSummarySingular=One selected transaction. Amount: {0}
+CheckModePanel.selectedSummaryPlural={0} transações selecionadas. Total: {1}
+CheckModePanel.selectedSummarySingular=Uma transação selecionada. Valor: {0}
 # An alert message displayed when the edited statement is not the last one
-CheckModePanel.notLast.message=Warning, there are statements newer than this one!
+CheckModePanel.notLast.message=Advertência, existe conta mais nova do que essa!
 # In the edited statement, a new popup menu allow the user to remove selected transactions from the statement.   
-MainMenu.Transactions.Uncheck=Remove from the statement
-MainMenu.Transactions.Uncheck.ToolTip=Removes the transaction from the statement
+MainMenu.Transactions.Uncheck=Remove da conta
+MainMenu.Transactions.Uncheck.ToolTip=Remove a transação da conta
+
+#-------------------------------------------------------
+# Added or modified since last translation
+
+
