--- a/Yapbam/src/net/yapbam/gui/tools/messages_pt.properties
+++ b/Yapbam/src/net/yapbam/gui/tools/messages_pt.properties
@@ -8,10 +8,9 @@ ToolsPlugIn.currencyConverter.title=Convertedor de moedas
 ToolsPlugIn.currencyConverter.toolTip=Abri o convertedor de moedas
 ToolsPlugIn.menu.title=Ferramentas
 ToolsPlugIn.menu.toolTip=Permite acesso a utilidade de servi\u00e7o do Yapbam    
+ToolsPlugin.currencyConverter.wait.message=<html>Baixa o valor corrente do Banco Central Europeu.<br>Obrigado pela sua paciência.</html>
+ToolsPlugin.currencyConverter.ioErrorMessage=<html>Um erro ocorreu enquanto comunicando com Banco Central Europeu.<br>Tenha certeza que a sua Internet está funcionando.</html>
 CurrencyConverterPanel.CurrencyColumnName=Moedas
 CurrencyConverterPanel.CurrencyToColumnName=1 moeda = ? {0}
 CurrencyConverterPanel.ToCurrencyColumnName=1 {0} = ? moedas
 
-#Added or modified since last translation
-ToolsPlugin.currencyConverter.ioErrorMessage=<html>An error occurred while communicating with the European Central Bank.<br>Make sure your Internet connection is working.</html>
-ToolsPlugin.currencyConverter.wait.message=<html>Download of currency from the European Central Bank.<br>Thank you for your patience.</html>
