--- a/src/localization/relnotes.txt
+++ b/src/localization/relnotes.txt
@@ -4,9 +4,12 @@ known
 	When selecting a shortcut to a folder in the drop down menu of a file selection dialog, under java 1.6, Yapbam hangs.<br/>In fact, this is not a Yapbam bug, but a <a href="http://bugs.sun.com/bugdatabase/view_bug.do;jsessionid=518b010bce71d8547e0dfeee596a?bug_id=6550546">java1.6 bug</a>. The best way to fix the problem is use java 1.7.
 improvement
 	Yapbam is able to automatically save your data to a disk or a ftp server.
+	
+version	0.11.0 (05/11/2012)
+improvement
 	Adds a  waiting message when the currency converter connects to the ECB.
 	Introduces a simpler, clearer (the current statement is displayed below the list of transactions to check) and more powerful (one can check multiple transactions at once, undo check, etc ...) check mode in the statement tab.
-	
+
 version	0.10.2 (04/25/2012)
 improvement
 	Adds an item to "Transactions" menu to create tranfers between accounts.
