--- a/src/localization/relnotes.txt
+++ b/src/localization/relnotes.txt
@@ -5,6 +5,10 @@ known
 improvement
 	Yapbam is able to automatically save your data to a disk or a ftp server.
 	
+version	0.11.1 (05/12/2012)
+fix
+	The periodical generation was broken in the 0.11.0 version.
+	
 version	0.11.0 (05/11/2012)
 improvement
 	Adds a  waiting message when the currency converter connects to the ECB.
