--- a/Yapbam/src/localization/fr/relnotes.txt
+++ b/Yapbam/src/localization/fr/relnotes.txt
@@ -4,7 +4,12 @@ known
 	Yapbam, lorsqu'il est exécuté par Java 1.6, plante quand on sélectionne un raccourci vers un dossier dans le menu déroulant d'un dialogue de sélection de fichier.<br/>En fait, ce n'est pas un bug de Yapbam, mais un <a href="http://bugs.sun.com/bugdatabase/view_bug.do;jsessionid=518b010bce71d8547e0dfeee596a?bug_id=6550546">bug de java 1.6</a>. La meilleure façon de régler le problème est d'utiliser Java 1.7.
 improvement
 	Yapbam peut effectuer automatiquement la sauvegarde de vos données sur un disque ou sur un serveur via ftp.
+	
+version	0.11.2 (31/05/2012)
+improvement
 	Les exports au format csv ne contiennent plus de séparateurs de milliers (Excel ne reconnait pas les chaînes de caractères qui en contiennent comme des nombres).
+fix
+	Dans les pays où l'espace est le séparateur des milliers (France, Suède, etc...), les montants incluant ce séparateur étaient rejetés lors de l'import (Ceci était dû à <a href="http://bugs.sun.com/view_bug.do?bug_id=4510618">un bug de Java</a>).
 
 version	0.11.1 (12/05/2012)
 fix
