--- a/Yapbam/src/Resources_pt.properties
+++ b/Yapbam/src/Resources_pt.properties
@@ -1031,6 +1031,6 @@ MainMenu.Transactions.Uncheck.ToolTip=Remove a transação da conta
 # Added or modified since last translation
 
 Generic.wait.title=Por favor espere ...
-Generic.wait.readingFrom=Reading from {0} ...
-Generic.wait.writingTo=Writing to {0} ...
+Generic.wait.readingFrom=Leitura de {0} ...
+Generic.wait.writingTo=Escrevendo para {0} ...
 
