--- a/Yapbam/src/Resources_de.properties
+++ b/Yapbam/src/Resources_de.properties
@@ -1020,6 +1020,6 @@ MainMenu.Transactions.Uncheck.ToolTip=Den gew\u00e4hlten Zahlungsvorgang von die
 # Added or modified since last translation
 
 Generic.wait.title=Bitte warten...
-Generic.wait.readingFrom=Reading from {0} ...
-Generic.wait.writingTo=Writing to {0} ...
+Generic.wait.readingFrom=Das Lesen von {0} ...
+Generic.wait.writingTo=Das Schreiben auf {0} ...
 
