--- a/Yapbam/src/net/yapbam/gui/tools/messages.properties
+++ b/Yapbam/src/net/yapbam/gui/tools/messages.properties
@@ -12,6 +12,8 @@ CurrencyConverterPanel.CurrencyColumnName=Currency
 CurrencyConverterPanel.CurrencyToColumnName=1 currency = ? {0}
 CurrencyConverterPanel.ToCurrencyColumnName=1 {0} = ? currency
 
-#Added or modified since last translation
 ToolsPlugin.currencyConverter.ioErrorMessage=<html>An error occurred while communicating with the European Central Bank.<br>Make sure your Internet connection is working.</html>
 ToolsPlugin.currencyConverter.wait.message=<html>Download of currency from the European Central Bank.<br>Thank you for your patience.</html>
+
+#Added or modified since last translation
+CurrencyConverterPanel.CodeColumnName=Code
