--- a/Yapbam/src/net/yapbam/gui/tools/messages_de.properties
+++ b/Yapbam/src/net/yapbam/gui/tools/messages_de.properties
@@ -13,3 +13,6 @@ ToolsPlugin.currencyConverter.ioErrorMessage=<html>Beim Verbindungsaufbau zur Eu
 CurrencyConverterPanel.CurrencyColumnName=W\u00e4hrung
 CurrencyConverterPanel.CurrencyToColumnName=1 W\u00e4hrung = ? {0}
 CurrencyConverterPanel.ToCurrencyColumnName=1 {0} = ? W\u00e4hrung
+
+#Added or modified since last translation
+CurrencyConverterPanel.CodeColumnName=Code
