--- a/Yapbam/src/localization/fr/relnotes.txt
+++ b/Yapbam/src/localization/fr/relnotes.txt
@@ -9,7 +9,8 @@ version	0.11.3 (06/??/2012)
 improvement
 	Les lignes des tableaux de la rubrique "Gestion des comptes" de l'onglet "Administration" peuvent à présent être triées.
 	Il est à présent possible de supprimer une clef de tri dans les tableaux (en cliquant plusieurs fois sur l'entête de la colonne qui sert de clef de tri). 
-	Il est à présent possible de mémoriser l'ordre de tri des lignes de tableaux antre deux éxécutions de Yapbam.
+	Il est à présent possible de mémoriser l'ordre de tri des lignes de tableaux entre deux exécutions de Yapbam.
+	Dans le convertisseur de devise, le nom de la devise et son code sont à présent dans des colonnes distinctes. Le tableau des devises peut être trié.
 	
 version	0.11.2 (28/05/2012)
 improvement
