--- a/Yapbam/src/Resources_de.properties
+++ b/Yapbam/src/Resources_de.properties
@@ -1023,3 +1023,6 @@ Generic.wait.title=Bitte warten...
 Generic.wait.readingFrom=Das Lesen von {0} ...
 Generic.wait.writingTo=Das Schreiben auf {0} ...
 
+# New button in the preference dialog/start state, to remember the sort order of the lines in the tables
+PreferencesDialog.StartState.rowOrder=Pflegen Sie die Sortierreihenfolge der Zeilen
+PreferencesDialog.StartState.rowOrder.tooltip=Markieren Sie dieses Kästchen, um die Sortierreihenfolge der Zeilen in den Tabellen erhalten von einer Ausführung zur anderen
