--- a/Yapbam/src/Resources_de.properties
+++ b/Yapbam/src/Resources_de.properties
@@ -1019,10 +1019,11 @@ MainMenu.Transactions.Uncheck.ToolTip=Den gew\u00e4hlten Zahlungsvorgang von die
 #-------------------------------------------------------
 # Added or modified since last translation
 
-Generic.wait.title=Bitte warten...
-Generic.wait.readingFrom=Das Lesen von {0} ...
-Generic.wait.writingTo=Das Schreiben auf {0} ...
+#When reading or writing data, dialog were added to show the progress of the task.
+Generic.wait.title=Merci de patienter ...
+Generic.wait.readingFrom=Lecture à partir de {0} ...
+Generic.wait.writingTo=Ecriture vers {0} ...
 
 # New button in the preference dialog/start state, to remember the sort order of the lines in the tables
-PreferencesDialog.StartState.rowOrder=Pflegen Sie die Sortierreihenfolge der Zeilen
-PreferencesDialog.StartState.rowOrder.tooltip=Markieren Sie dieses Kästchen, um die Sortierreihenfolge der Zeilen in den Tabellen erhalten von einer Ausführung zur anderen
+PreferencesDialog.StartState.rowOrder=Conserver l'ordre de tri des lignes
+PreferencesDialog.StartState.rowOrder.tooltip=Cochez cette case pour conserver l'ordre de tri des lignes dans les tableaux d'une exécution à l'autre
